Improvements to unit hangar
These improvements entail a wide range of new files
including some new language files. There are some
stubbed out image files for testing, a few updates
to the gulpfile as well in order to facilitate the
newest changes.

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,4 +1,19 @@
 {
+  "nav": {
+    "Objectives": "Objetivos",
+    "Hangar": null,
+    "Barracks": "Cuartel",
+    "Market": "Mercado"
+  },
+  "common": {
+    "Apply": "Aplicar",
+    "Chassis": "Chasis",
+    "Condition": "Condición",
+    "Damage": "Dañar",
+    "Price": "Precio",
+    "Repair": "Reparar",
+    "Variant": "Variante"
+  },
   "skills": {
     "Acrobatics": "Acrobacia",
     "Acting": "Acción",
