Changed some wonky translations. Still need to review a few things due to a lack of context. CAAARL

--- a/lang/es_mex.json
+++ b/lang/es_mex.json
@@ -1,7 +1,7 @@
 {
   "nav": {
     "Objectives": "Objetivos",
-    "Hangar": null,
+    "Hangar": "Hangar",
     "Barracks": "Cuartel",
     "Market": "Mercado"
   },
@@ -19,7 +19,7 @@
     "Acting": "Acción",
     "Administration": "Administración",
     "Appraisal": "Evaluación",
-    "Archery": "Tiro al Arco",
+    "Archery": "Tiro con Arco",
     "Art": "Arte",
     "Artillery": "Artillería",
     "Career": "Carrera",
@@ -32,7 +32,7 @@
     "Driving": "Conducir",
     "Escape Artist": "Artista del Escape",
     "Forgery": "Falsificación",
-    "Gunnery": "Puntería",
+    "Gunnery": "Armamento",
     "Interest": "Interés",
     "Interrogation": "Interrogatorio",
     "Investigation": "Investigación",
@@ -57,32 +57,32 @@
     "Support Weapons": "Armas de Apoyo",
     "Surgery": "Cirugía",
     "Survival": "Supervivencia",
-    "Swimming": "Natación",
-    "Tactics": "Táctica",
+    "Swimming": "Nadar",
+    "Tactics": "Tácticas",
     "Technician": "Técnico",
-    "Thrown Weapons": "Armas Arrojadizas",
-    "Tracking": "Rastero",
-    "Training": "Formación",
+    "Thrown Weapons": "Armas Arrojadas",
+    "Tracking": "Rastreo",
+    "Training": "Entrenamiento",
     "Zero Gravity Operations": "Operaciones de Gravedad Cero"
   },
   "traits": {
-    "Alternate Identity": "Identidad Alternativo",
-    "Ambidextrous": "Ambidextro",
+    "Alternate Identity": "Identidad Alterna",
+    "Ambidextrous": "Ambidiestro",
     "Animal Empathy": "Empatía Animal",
     "Attractive": "Atractivo",
     "Citizen": "Ciudadano",
-    "Trueborn": "verdadero nacido",
+    "Trueborn": "auténtico",
     "Combat Sense": "Sentido de Combate",
     "Connections": "Conexiones",
     "Exceptional Attribute": "Atributo Excepcional",
-    "Fast Learner": "Aprendiz Rapido",
-    "Fit": "Encajar",
-    "Gravity Tolerance": "Tolerancia Gravedad",
-    "Good Hearing": "Bueno Audiencia",
+    "Fast Learner": "Aprendizaje Rápido",
+    "Fit": "Encaja",
+    "Gravity Tolerance": "Tolerancia de Gravedad",
+    "Good Hearing": "Buen Oído",
     "Good Vision": "Buena Visión",
     "Gregarious": "Gregario",
     "Implant": "Implante",
-    "Prosthetic": "Protésico",
+    "Prosthetic": "Prostético",
     "Natural Aptitude": "Aptitud Natural",
     "Pain Resistance": "Resistencia al Dolor",
     "Patient": "Paciente",
@@ -94,13 +94,13 @@
     "Tech Empathy": "Empatía Tecnología",
     "Thick-Skinned": "Insensible",
     "Title": "Título",
-    "Bloodname": "Nombre de la Sangre",
+    "Bloodname": "Nombre de Sangre",
     "Toughness": "Tenacidad",
     "Animal Antipathy": "Antipatía Animales",
     "Bloodmark": "Acusado",
     "Combat Paralysis": "Parálisis de Combate",
     "Compulsion": "Compulsión",
-    "Dark Secret": "Oscuro Secreto",
+    "Dark Secret": "Secreto Oscuro",
     "Dependent": "Dependiente",
     "Enemy": "Enemigo",
     "Glass Jaw": null,
@@ -108,10 +108,10 @@
     "Handicap": null,
     "Illiterate": "Analfabeto",
     "Impatient": "Impaciente",
-    "In For Life": "En la Vida",
+    "In For Life": "De Por Vida",
     "Introvert": "Introvertido",
     "Lost Limb": "Extremidad Perdida",
-    "Poor Hearing": "Mala Audición",
+    "Poor Hearing": "Mal Oído",
     "Poor Vision": "Mala Visión",
     "Slow Learner": "Aprendizaje Lento",
     "Thin-Skinned": "Susceptible",
@@ -123,7 +123,7 @@
     "Reputation": "Reputación",
     "Wealth": "Riqueza",
     "Custom Vehicle": "Vehículo Personalizado",
-    "Design Quirk": "Diseño Capricho",
+    "Design Quirk": "Excentricidad De Diseño",
     "Vehicle Trait": "Rasgo Vehículo"
   }
 }
